examples/test/testpolicy1749.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1749
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key40: value44
      key30: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value30
          key17: value34
          key9: value17
      podSelector:
        matchLabels:
          key1: value7
          key2: value38
